package designpatterns;

public interface Documento {
    void imprimir();
}