@startuml
class designpatterns.PDF {
+ void imprimir()
}

class designpatterns.FabricaDocumentos {
+ Documento criarDocumento(String)
}

interface designpatterns.Documento {
~ void imprimir()
}

class designpatterns.Main {
+ {static} void main(String[])
}

class designpatterns.HTML {
+ void imprimir()
}

class designpatterns.Word {
+ void imprimir()
}



designpatterns.Documento <|.. designpatterns.PDF
designpatterns.Documento <|.. designpatterns.HTML
designpatterns.Documento <|.. designpatterns.Word
@enduml